# MyAWSInfraProj1

./: .gitignore  API_DOCUMENTATION.md  QUICK_REFERENCE.md  TESTING_GUIDE.md  terragrunt.hcl
Infrastructure/: README.md  terragrunt.hcl
Infrastructure/app/: main.tf  outputs.tf  variables.tf
Infrastructure/env/dev/: terragrunt.hcl
Infrastructure/env/prod/: terragrunt.hcl
Infrastructure/modules/api-gateway/: README.md  main.tf  outputs.tf  variables.tf
Infrastructure/modules/common/: variables.tf
Infrastructure/modules/lambda/: README.md  main.tf  outputs.tf  variables.tf
Infrastructure/modules/project/: main.tf  outputs.tf  variables.tf
Infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
Infrastructure/modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
docs/: API_GATEWAY_SETUP.md  CONSOLE_TEST_LIMITATION.md  DEPLOYMENT_READY.md  FINAL_STATUS.md  TASK_7_COMPLETION.md  project-guidelines-steering.md  project-module.md
lambda/rest-api/: .gitignore  Makefile  README.md  handler.py  pyproject.toml  requirements.txt  test_handler.py
lambda/rest-api/.kiro/settings/: workspace.json
lambda/rest-api/.kiro/steering/: development.md
